string/string.css
[mol_string] {
	box-sizing: border-box;
	@apply --mol_skin_outline;
	outline-offset: 0;
	border: none;
	border-radius: var(--mol_skin_round);
	white-space: nowrap;
	overflow: hidden;
	padding: .5rem;
	text-align: left;
	position: relative;
	z-index: 0;
	font: inherit;
	flex: 0 1 auto;
	width: 8rem;
	background: var(--mol_skin_passive);
	color: var(--mol_skin_passive_text);
}

[mol_string]:enabled {
	background: var(--mol_skin_card);
	color: var(--mol_skin_light_text);
}

[mol_string]:enabled:hover ,
[mol_string]:focus {
	outline: none;
	z-index: 1;
}

[mol_string]:focus {
	@apply --mol_skin_focus;
}

[mol_string]::-ms-clear {
	display: none;
}

